fixed bugs, removed some unnecessary lines of code. optimized unit tests